--- a/src/index.html
+++ b/src/index.html
@@ -18,20 +18,25 @@
         <div class="site">
             <ul>
                 <li>
-                    <div class="logo"></div>
-                    <div class="url"></div>
+                    <div class="logo"><img src="../image/baidu_favicon.ico" alt="百度logo"></div>
+                    <div class="url">百度一下</div>
                 </li>
                 <li>
-                    <div class="logo"></div>
-                    <div class="url"></div>
+                    <div class="logo"><img src="../image/bilibili_favicon.ico" alt="哔哩哔哩logo"></div>
+                    <div class="url">哔哩哔哩</div>
                 </li>
-                <li>
-                    <div class="logo"></div>
-                    <div class="url"></div>
+                <li id="add">
+                    <div class="logo">
+                        <svg class="icon">
+                            <use xlink:href="#iconadd"></use>
+                        </svg>
+                    </div>
+                    <div class="url">添加快捷导航</div>
                 </li>
             </ul>
         </div>
     </main>
+    <script src="//at.alicdn.com/t/font_1821994_czgqlxr9nui.js"></script>
     <script src="main.js"></script>
 </body>
 
