--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 <li>
                     <div class="logo"><img src="../image/baidu_favicon.ico" alt="百度logo"></div>
                     <div class="url">百度一下</div>
-                    <div class="write">
+                    <div class="write" title="修改">
                         <svg class="icon-xiugai">
                             <use xlink:href="#icon-xiugai"></use>
                         </svg>
@@ -32,7 +32,7 @@
                 <li>
                     <div class="logo"><img src="../image/bilibili_favicon.ico" alt="哔哩哔哩logo"></div>
                     <div class="url">哔哩哔哩</div>
-                    <div class="write">
+                    <div class="write" title="修改">
                         <svg class="icon-xiugai">
                             <use xlink:href="#icon-xiugai"></use>
                         </svg>
